--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="main.js" defer></script>
-    <script src="destr.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Taller POO</title>
+    <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="form_poo">
+        <form class="row g-3 needs-validation" id="formPersona" novalidate>
+            <div class="col-md-4">
+              <label for="nombrePersona" class="form-label">Nombre</label>
+              <input type="text" name="nombre" class="form-control" id="nombrePersona" required>
+              <div class="valid-feedback">
+                Correcto
+              </div>
+              <div class="invalid-feedback">
+                Ingrese nombre
+              </div>
+            </div>
+            <div class="col-md-4">
+              <label for="edadPersona" class="form-label">Edad</label>
+              <input type="text" name="edad" class="form-control" id="edadPersona" required>
+              <div class="valid-feedback">
+                Correcto
+              </div>
+              <div class="invalid-feedback">
+                Ingrese la edad
+              </div>
+            </div>
+            <div class="col-md-3">
+              <label for="sexoPersona" class="form-label">Sexo</label>
+              <select class="form-select" name="sexo" id="sexoPersona" required>
+                <option selected disabled value="">...</option>
+                <option>Femenino</option>
+                <option>Masculino</option>
+                <option>Joto</option>
+                <option>Alienigena</option>
+              </select>
+              <div class="invalid-feedback">
+                Ingrese el sexo
+              </div>
+              <div class="invalid-feedback">
+                Please select a valid state.
+              </div>
+            </div>
+            <div class="col-12">
+                <input type="submit" name="botonPersona" id="botonPersona" class="btn btn-primary">
+            </div>
+        </form>
+    </section>
 </body>
 </html>
