--- a/html/vehiculo.html
+++ b/html/vehiculo.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Taller POO</title>
-    <script src="js/Persona.js" defer></script>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="js/Vehiculo.js" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Persona</a>
+        <a class="navbar-brand" href="../index.html">Persona</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="html/animal.html">Animal</a>
+              <a class="nav-link" href="animal.html">Animal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="html/figura.html">Figura</a>
+              <a class="nav-link" href="figura.html">Figura</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="html/vehiculo.html">Vehiculo</a>
+              <a class="nav-link" href="vehiculo.html">Vehiculo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="html/figura.html">Figura</a>
+              <a class="nav-link" href="empleado.html">Empleado</a>
             </li>
           </ul>
         </div>
