feat: :sparkles: Development of the point half 3 and 4, with page design
javascript development and point optimization.

--- a/html/figura.html
+++ b/html/figura.html
@@ -69,6 +69,27 @@
                 Ingrese el radio del circulo
               </div>
             </div>
+            <h2>Rectangulo</h2>
+            <div class="col-md-4">
+              <label for="largoRectangulo" class="form-label">Largo</label>
+              <input type="text" name="largo" class="form-control" id="largoRectangulo" required>
+              <div class="valid-feedback">
+                Correcto
+              </div>
+              <div class="invalid-feedback">
+                Ingrese el largo del Rectangulo
+              </div>
+            </div>
+            <div class="col-md-4">
+              <label for="anchoRectangulo" class="form-label">Ancho</label>
+              <input type="text" name="ancho" class="form-control" id="anchoRectangulo" required>
+              <div class="valid-feedback">
+                Correcto
+              </div>
+              <div class="invalid-feedback">
+                Ingrese el ancho del rectangulo
+              </div>
+            </div>
             <div class="col-12">
                 <input type="submit" name="botonFigura" id="botonFigura" class="btn btn-primary">
             </div>
@@ -76,13 +97,19 @@
               <!--Se muestra el 1 resultado Colocado Intencionalmente-->
             </div>
             <div class="res3" id="re">
-              <!--Se muestra el 3 resultado Colocado Intencionalmente CirculoArea-->
+              <!--Se muestra el 4 resultado Colocado Intencionalmente CirculoArea-->
+            </div>
+            <div class="res5" id="re">
+              <!--Se muestra el 3 resultado Colocado Intencionalmente AreaRectangulo-->
             </div>
             <div class="resto" id="rep">
               <!--Se muestra el 2 resultado Colocado calcular area-->
             </div>
             <div class="res2" id="rep">
               <!--Se muestra el 3 resultado Colocado calcular area Circulo-->
+            </div>
+            <div class="res4" id="rep">
+              <!--Se muestra el 5 resultado Colocado calcular area Rectangulo-->
             </div>
         </form>
       </section>
