--- a/html/vehiculo.html
+++ b/html/vehiculo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Taller POO</title>
-    <script src="js/Vehiculo.js" defer></script>
+    <script src="../js/Vehiculo.js" defer></script>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -36,73 +36,52 @@
     </nav>
     <div id="form">
       <section class="form_poo">
-        <form class="row g-3 needs-validation" id="formPersona" novalidate>
+        <form class="row g-3 needs-validation" id="formVehiculo" novalidate>
           <h2>Formulario</h2>
             <div class="col-md-4">
-              <label for="nombrePersona" class="form-label">Nombre</label>
-              <input type="text" name="nombre" class="form-control" id="nombrePersona" required>
+              <label for="marcaVehiculo" class="form-label">Marca</label>
+              <input type="text" name="marca" class="form-control" id="marcaVehiculo" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese nombre
+                Ingrese la marca del vehiculo
               </div>
             </div>
             <div class="col-md-4">
-              <label for="edadPersona" class="form-label">Edad</label>
-              <input type="text" name="edad" class="form-control" id="edadPersona" required>
+              <label for="modeloVehiculo" class="form-label">Modelo</label>
+              <input type="text" name="modelo" class="form-control" id="modeloVehiculo" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese la edad
-              </div>
-            </div>
-            <div class="col-md-3">
-              <label for="sexoPersona" class="form-label">Sexo</label>
-              <select class="form-select" name="sexo" id="sexoPersona" required>
-                <option selected disabled value="">....</option>
-                <option>Femenino</option>
-                <option>Masculino</option>
-                <option>Joto</option>
-                <option>Alienigena</option>
-              </select>
-              <div class="valid-feedback">
-                Correcto
-              </div>
-              <div class="invalid-feedback">
-                Ingrese el sexo
+                Ingrese el modelo del vehiculo
               </div>
             </div>
             <div class="col-md-4">
-              <label for="carreraEstudiante" class="form-label">Carrera</label>
-              <input type="text" name="carrera" class="form-control" id="carreraEstudiante" required>
+              <label for="velocidadVehiculo" class="form-label">Velocidad</label>
+              <input type="text" name="velocidad" class="form-control" id="velocidadVehiculo" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese la carrera
+                Ingrese la velocidad
               </div>
             </div>
             <div class="col-12">
-                <input type="submit" name="botonPersona" id="botonPersona" class="btn btn-primary">
+                <input type="submit" name="botonVehiculo" id="botonVehiculo" class="btn btn-primary">
             </div>
             <div class="res1" id="re">
-              <!--Se muestra el 1 resultado Colocado Intencionalmente-->
-            </div>
-            <div class="res3" id="re">
-              <!--Se muestra el 3 resultado Colocado seccion ESTUDIANTE-->
-            </div>
-            <div class="resto" id="rep">
-              <!--Se muestra el resultado Principal Ingresado-->
+              <!--Se muestra el 1 resultado Colocado Intencionalmente vehiculoacelerar-->
             </div>
             <div class="res2" id="rep">
-              <!--Se muestra el 2 resultado Colocado seccion ESTUDIANTE-CARRERA-->
+              <!--Se muestra el 2 resultado Colocado seccion COCHE 1 -->
             </div>
+            <div class="resto" id="rep">
+              <!--Se muestra el resultado Principal Ingresado Vehiculoacelerar-->
+            </div>
+           
             
-            <div class="res4" id="rep">
-              <!--Se muestra el 4 resultado Colocado seccion MAYOR DE EDAD-->
-            </div>
         </form>
       </section>
     </div> 
