perf: :hammer: Implementing the finishing touches to development scripts
Create, update and design in the code improvements or functionalities necessary for the completion of the work.

--- a/html/vehiculo.html
+++ b/html/vehiculo.html
@@ -34,11 +34,11 @@
         </div>
       </div>
     </nav>
-    <div id="form">
+    <div id="form" class="container">
       <section class="form_poo">
         <form class="row g-3 needs-validation" id="formVehiculo" novalidate>
           <h2>Formulario</h2>
-            <div class="col-md-4">
+            <div class="col-md-4" class="form-content">
               <label for="marcaVehiculo" class="form-label">Marca</label>
               <input type="text" name="marca" class="form-control" id="marcaVehiculo" required>
               <div class="valid-feedback">
@@ -74,13 +74,15 @@
             <div class="res1" id="re">
               <!--Se muestra el 1 resultado Colocado Intencionalmente vehiculoacelerar-->
             </div>
-            <div class="res2" id="rep">
+            <div class="res2" id="re">
               <!--Se muestra el 2 resultado Colocado seccion COCHE 1 -->
             </div>
             <div class="resto" id="rep">
               <!--Se muestra el resultado Principal Ingresado Vehiculoacelerar-->
             </div>
-           
+            <div class="res3" id="rep">
+              <!--Se muestra el 3 resultado Colocado seccion velocidad km-->
+            </div>
             
         </form>
       </section>
