--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
               <a class="nav-link" href="html/vehiculo.html">Vehiculo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="html/figura.html">Figura</a>
+              <a class="nav-link" href="html/empleado.html">Empleado</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div id="form">
+    <div id="form" class="container">
       <section class="form_poo">
         <form class="row g-3 needs-validation" id="formPersona" novalidate>
           <h2>Formulario</h2>
-            <div class="col-md-4">
+            <div class="col-md-4" class="form-content">
               <label for="nombrePersona" class="form-label">Nombre</label>
               <input type="text" name="nombre" class="form-control" id="nombrePersona" required>
               <div class="valid-feedback">
