--- a/html/animal.html
+++ b/html/animal.html
@@ -34,11 +34,11 @@
         </div>
       </div>
     </nav>
-    <div id="form">
+    <div id="form" class="container">
       <section class="form_poo">
         <form class="row g-3 needs-validation" id="formAnimal" novalidate>
           <h2>Formulario</h2>
-            <div class="col-md-4">
+            <div class="col-md-4" class="form-content">
               <label for="nombreAnimal" class="form-label">Nombre Animal</label>
               <input type="text" name="nombre" class="form-control" id="nombreAnimal" required>
               <div class="valid-feedback">
