--- a/html/empleado.html
+++ b/html/empleado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Taller POO</title>
-    <script src="js/Empleado.js" defer></script>
+    <script src="../js/Empleado.js" defer></script>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -34,74 +34,57 @@
         </div>
       </div>
     </nav>
-    <div id="form">
+    <div id="form" class="container">
       <section class="form_poo">
-        <form class="row g-3 needs-validation" id="formPersona" novalidate>
+        <form class="row g-3 needs-validation" id="formEmpleado" novalidate>
           <h2>Formulario</h2>
-            <div class="col-md-4">
-              <label for="nombrePersona" class="form-label">Nombre</label>
-              <input type="text" name="nombre" class="form-control" id="nombrePersona" required>
+            <div class="col-md-4" class="form-content">
+              <label for="nombreEmpleado" class="form-label">Nombre Empleado</label>
+              <input type="text" name="nombre" class="form-control" id="nombreEmpleado" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese nombre
+                Ingrese nombre del empleado
               </div>
             </div>
             <div class="col-md-4">
-              <label for="edadPersona" class="form-label">Edad</label>
-              <input type="text" name="edad" class="form-control" id="edadPersona" required>
+              <label for="edadEmpleado" class="form-label">Edad Empleado</label>
+              <input type="text" name="edad" class="form-control" id="edadEmpleado" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese la edad
-              </div>
-            </div>
-            <div class="col-md-3">
-              <label for="sexoPersona" class="form-label">Sexo</label>
-              <select class="form-select" name="sexo" id="sexoPersona" required>
-                <option selected disabled value="">....</option>
-                <option>Femenino</option>
-                <option>Masculino</option>
-                <option>Joto</option>
-                <option>Alienigena</option>
-              </select>
-              <div class="valid-feedback">
-                Correcto
-              </div>
-              <div class="invalid-feedback">
-                Ingrese el sexo
+                Ingrese la edad del empleado
               </div>
             </div>
             <div class="col-md-4">
-              <label for="carreraEstudiante" class="form-label">Carrera</label>
-              <input type="text" name="carrera" class="form-control" id="carreraEstudiante" required>
+              <label for="sueldoEmpleado" class="form-label">Sueldo</label>
+              <input type="text" name="sueldo" class="form-control" id="sueldoEmpleado" required>
               <div class="valid-feedback">
                 Correcto
               </div>
               <div class="invalid-feedback">
-                Ingrese la carrera
+                Ingrese el sueldo del empleado
               </div>
             </div>
             <div class="col-12">
-                <input type="submit" name="botonPersona" id="botonPersona" class="btn btn-primary">
+                <input type="submit" name="botonEmpleado" id="botonEmpleado" class="btn btn-primary">
             </div>
             <div class="res1" id="re">
-              <!--Se muestra el 1 resultado Colocado Intencionalmente-->
+              <!--Se muestra el 1 resultado Colocado Intencionalmente SalarioAnual-->
             </div>
             <div class="res3" id="re">
-              <!--Se muestra el 3 resultado Colocado seccion ESTUDIANTE-->
+              <!--Se muestra el 3 resultado Colocado Intencionalmente SalarioAnual Gerente-->
             </div>
             <div class="resto" id="rep">
-              <!--Se muestra el resultado Principal Ingresado-->
+              <!--Se muestra el resultado Principal Ingresado 1-->
             </div>
             <div class="res2" id="rep">
-              <!--Se muestra el 2 resultado Colocado seccion ESTUDIANTE-CARRERA-->
+              <!--Se muestra el resultado 2 salarioanual Gerente-->
             </div>
-            
             <div class="res4" id="rep">
-              <!--Se muestra el 4 resultado Colocado seccion MAYOR DE EDAD-->
+              <!--Se muestra el ID generado para empleado-->
             </div>
         </form>
       </section>
