--- a/html/figura.html
+++ b/html/figura.html
@@ -34,11 +34,11 @@
         </div>
       </div>
     </nav>
-    <div id="form">
+    <div id="form" class="container">
       <section class="form_poo">
         <form class="row g-3 needs-validation" id="formFigura" novalidate>
           <h2>Formulario</h2>
-            <div class="col-md-4">
+            <div class="col-md-4" class="form-content">
               <label for="colorFigura" class="form-label">Color</label>
               <input type="text" name="color" class="form-control" id="colorFigura" required>
               <div class="valid-feedback">
